[gd_scene load_steps=13 format=3 uid="uid://dqlvspf7m032i"]

[ext_resource type="Script" uid="uid://df1r2x8j35nav" path="res://scripts/checkpoint.gd" id="1_jmy7n"]
[ext_resource type="Texture2D" uid="uid://dfs75bbdmhjs1" path="res://assets/Mini FX, Items & UI/Common Pick-ups/checkpoint.png" id="1_xsm40"]
[ext_resource type="AudioStream" uid="uid://idvuanhlxx6j" path="res://sounds/checkpoint.wav" id="3_els25"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8h541"]
atlas = ExtResource("1_xsm40")
region = Rect2(90, 0, 18, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5ojy"]
atlas = ExtResource("1_xsm40")
region = Rect2(108, 0, 18, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_els25"]
atlas = ExtResource("1_xsm40")
region = Rect2(18, 0, 18, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5h7x"]
atlas = ExtResource("1_xsm40")
region = Rect2(36, 0, 18, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5no8"]
atlas = ExtResource("1_xsm40")
region = Rect2(54, 0, 18, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh4b2"]
atlas = ExtResource("1_xsm40")
region = Rect2(72, 0, 18, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmy7n"]
atlas = ExtResource("1_xsm40")
region = Rect2(0, 0, 18, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_bf7gi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h541")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5ojy")
}],
"loop": true,
"name": &"checked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_els25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5h7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5no8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh4b2")
}],
"loop": false,
"name": &"rising",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmy7n")
}],
"loop": false,
"name": &"unchecked",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsm40"]
size = Vector2(26, 27)

[node name="checkpoint" type="Area2D"]
script = ExtResource("1_jmy7n")

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_bf7gi")
animation = &"unchecked"
autoplay = "unchecked"
frame_progress = 1.0

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_xsm40")

[node name="respawn" type="Marker2D" parent="."]
position = Vector2(0, -25)

[node name="checkpoint_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_els25")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
